; ModuleID = '/home/carl/AnghaBench/nanomsg/src/devices/extr_device.c_nn_custom_device.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/devices/extr_device.c_nn_custom_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_device_recipe = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_custom_device(%struct.nn_device_recipe* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.nn_device_recipe*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.nn_device_recipe* %0, %struct.nn_device_recipe** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.nn_device_recipe*, %struct.nn_device_recipe** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @nn_device_entry(%struct.nn_device_recipe* %9, i32 %10, i32 %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @nn_device_entry(%struct.nn_device_recipe*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
